--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.15.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-drag-listview": "^0.1.4",
+    "react-resizable": "^1.7.5",
     "react-scripts": "2.1.8"
   },
   "scripts": {
